--- a/style.css
+++ b/style.css
@@ -153,8 +153,11 @@ ul {
   margin-right: 345px;
 }
 
-.icon-mail-nav {
+.icon-mail {
+  margin-top: 1px;
   margin-right: 10px;
+  width: 16px;
+  height: 12px;
 }
 
 .mail-nav {
@@ -258,66 +261,6 @@ ul {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-}
-
-.backdrop {
-  position: fixed;
-  left: 0;
-  top: 0;
-  height: 100%;
-  width: 100%;
-  background: rgba(0, 0, 0, 0.2);
-}
-
-.modal {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-
-  width: 528px;
-  height: 581px;
-  background: #ffffff;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 4px;
-  animation: animateModal 1000ms 1000ms;
-  transform-origin: center center;
-  transform: translate(-50%, -50%);
-}
-
-@keyframes animateModal {
-  0% {
-    transform: translate(-50%, -50%) scale(0) rotate3d(0, 0, 1, 0deg);
-  }
-
-  100% {
-    transform: translate(-50%, -50%) scale(1) rotate3d(0, 0, 1, 720deg);
-  }
-}
-
-.close-btn {
-  position: absolute;
-  display: flex;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  background: #ffffff;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-}
-
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-
-.x {
-  font-size: 30px;
 }
 
 .zamow {
@@ -966,4 +909,250 @@ a {
     1px 4px 6px rgba(0, 0, 0, 0.16);
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  background: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  display: flex;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+
+  width: 528px;
+  height: 581px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  animation: animateModal 1000ms 1000ms;
+  transform-origin: center center;
+  transform: translate(-50%, -50%);
+}
+
+@keyframes animateModal {
+  0% {
+    transform: translate(-50%, -50%) scale(0) rotate3d(0, 0, 1, 0deg);
+  }
+
+  100% {
+    transform: translate(-50%, -50%) scale(1) rotate3d(0, 0, 1, 720deg);
+  }
+}
+
+.close-btn {
+  position: absolute;
+  display: flex;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background: #ffffff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.x {
+  font-size: 30px;
+}
+
+.modal-title {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 23px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #212121;
+  margin-bottom: 12px;
+}
+
+.modal-form-label {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.modal-form-input {
+  position: relative;
+  width: 448px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+}
+
+.modal-label-text {
+  margin-bottom: 4px;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 116%;
+  /* identical to box height */
+
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.modal-form-feedback {
+  width: 448px;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+textarea {
+  resize: none;
+}
+
+textarea::placeholder {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 14px;
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
+  padding: 12px 16px;
+}
+
+.modal-submit {
+  width: 200px;
+  height: 50px;
+  margin: 0;
+  border: 0;
+  background: #2196f3;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  margin: 0 auto;
+  cursor: pointer;
+}
+
+.modal-submit-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 187%;
+  /* identical to box height, or 187% */
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.modal-container {
+  display: flex;
+  justify-content: center;
+}
+
+.modal-btn {
+  display: flex;
+}
+
+.check-container {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  align-items: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+.modal-check-text {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 171%;
+  /* identical to box height, or 171% */
+  letter-spacing: 0.03em;
+  color: #757575;
+  margin-top: 2px;
+}
+
+.modal-check {
+  display: flex;
+  background: #212121;
+  margin-right: 8px;
+}
+
+.reg {
+  text-decoration: underline;
+  color: #2196f3;
+}
+
+.icon-head,
+.icon-modalphone,
+.icon-modalmail {
+  position: absolute;
+  width: 12px;
+  height: 12px;
+  margin: 14px 15px;
+  z-index: 999;
+}
+
+.rr:hover,
+.rr:focus {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-head,
+.rr:focus .icon-head {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-head .modal-form-input,
+.rr:focus .icon-head .modal-form-input {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-modalphone,
+.rr:focus .icon-modalphone {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-modalphone .modal-form-input,
+.rr:focus .icon-modalphone .modal-form-input {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-modalmail,
+.rr:focus .icon-modalmail {
+  color: #2196f3;
+  fill: #2196f3;
+}
+
+.rr:hover .icon-modalmail .modal-form-input,
+.rr:focus .icon-modalmail .modal-form-input {
+  color: #2196f3;
+  fill: #2196f3;
 }
