--- a/style.css
+++ b/style.css
@@ -746,6 +746,7 @@ ul {
   margin: 0;
   align-items: center;
   justify-content: center;
+  cursor: pointer;
 }
 
 .footer-submit-text {
@@ -1106,7 +1107,7 @@ textarea::placeholder {
 
 .modal-form-policy:checked + .check-bird::before {
   background-color: #2196f3;
-  background-image: url(../images/checkbox-ptaszek.svg);
+  background-image: url(/images/checkbox-ptaszek.svg);
   background-position: center;
   background-repeat: no-repeat;
   outline: 1px solid #2196f3;
